Add github fork me ribbon

--- a/samples/style.css
+++ b/samples/style.css
@@ -35,3 +35,13 @@ nav a:hover {
   margin-bottom: 1px;
   color: white;
 }
+
+.fork-me {
+  width: 148px;
+  height: 148px;
+  font: 0/0 a;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: url(https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png);
+}
